# czm-cli

./: README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: backend-local.md  getting-started.md  install.md  reference.md  setup.md  skill-install.md  troubleshooting.md  usage.md
scripts/: install_skill.py
skills/czm/: SKILL.md
skills/czm/references/: commands.md  entity-resolution.md  error-handling.md  examples.md  protocol.md  workflows.md
src/czm_cli/: __init__.py  bootstrap.py  cli.py  client.py  config.py  context.py  errors.py  formatting.py  resolution.py  schemas.py  time_utils.py
src/czm_cli/commands/: __init__.py  _common.py  application.py  due.py  episode.py  events.py  location.py  setup.py  subject.py
tests/: test_bootstrap.py  test_cli.py  test_client.py  test_config.py  test_human_formatting.py  test_install_skill.py  test_python_support.py  test_resolution.py  test_skill_package.py  test_time_utils.py
