[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "czm-cli"
version = "1.0.0"
description = "Production CLI client for the eczema treatment tracker backend"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
]

[project.scripts]
czm = "czm_cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["czm_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
